--- a/package.json
+++ b/package.json
@@ -61,9 +61,12 @@
     "vaul": "^0.9.3",
     "zod": "^3.23.8",
     "ethers": "^6.7.1",
-    "oqs": "github:open-quantum-safe/liboqs-node",
+    "oqs": "https://github.com/open-quantum-safe/liboqs-node.git",
     "ipfs-http-client": "^60.0.0",
-    "node-polyfill-webpack-plugin": "^2.0.0"
+    "crypto-browserify": "^3.12.0",
+    "stream-browserify": "^3.0.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -85,8 +88,9 @@
     "vite": "^5.4.1"
   },
   "browser": {
-    "crypto": false,
+    "crypto": "crypto-browserify",
     "fs": false,
-    "path": false
+    "path": "path-browserify",
+    "stream": "stream-browserify"
   }
 }
