--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "vaul": "^0.9.3",
     "zod": "^3.23.8",
     "ethers": "^6.7.1",
-    "oqs": "https://github.com/open-quantum-safe/liboqs-node.git",
+    "liboqs-wasm": "^0.1.0",
     "ipfs-http-client": "^60.0.0",
     "crypto-browserify": "^3.12.0",
     "stream-browserify": "^3.0.0",
