--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "TetraCryptPQC",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -35,13 +35,15 @@
     "zod": "^3.23.8",
     "ethers": "^6.7.1",
     "ipfs-http-client": "^60.0.0",
-    "liboqs-wasm": "^0.1.0",
     "wasm-feature-detect": "^1.3.1",
+    "kyber-crystals": "^1.0.0",
+    "falcon-js": "^1.0.0",
+    "sphincs-js": "^1.0.0",
     "crypto-browserify": "^3.12.0",
     "buffer": "^6.0.3",
-    "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
-    "path-browserify": "^1.0.1"
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
