--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "TetraCryptPQC",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -34,9 +34,10 @@
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
     "ethers": "^6.7.1",
+    "starknet": "^5.7.0",
+    "starknet-id": "^1.0.0",
     "ipfs-http-client": "^60.0.0",
     "wasm-feature-detect": "^1.3.1",
-    "pqcrypto": "github:cyph/pqcrypto.js",
     "crypto-browserify": "^3.12.0",
     "buffer": "^6.0.3",
     "stream-browserify": "^3.0.0",
