--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "TetraCryptPQC",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "private": true,
   "type": "module",
   "scripts": {
@@ -34,15 +34,9 @@
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
     "ethers": "^6.7.1",
-    "starknet": "^5.7.0",
-    "starknet-id": "^1.0.0",
+    "starknet": "^5.25.0",
     "ipfs-http-client": "^60.0.0",
-    "wasm-feature-detect": "^1.3.1",
-    "crypto-browserify": "^3.12.0",
-    "buffer": "^6.0.3",
-    "stream-browserify": "^3.0.0",
-    "path-browserify": "^1.0.1",
-    "process": "^0.11.10"
+    "wasm-feature-detect": "^1.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -64,11 +58,10 @@
     "vite": "^5.4.1"
   },
   "browser": {
-    "crypto": "crypto-browserify",
-    "buffer": "buffer",
+    "crypto": false,
     "fs": false,
-    "path": "path-browserify",
-    "stream": "stream-browserify",
-    "process": "process"
+    "path": false,
+    "stream": false,
+    "process": false
   }
 }
