--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "@menci/vite-plugin-wasm": "^0.6.2"  // ✅ Added WASM Plugin
   },
   "browser": {
     "crypto": false,
