--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "TetraCryptPQC",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "private": true,
   "type": "module",
   "scripts": {
@@ -35,8 +35,11 @@
     "zod": "^3.23.8",
     "ethers": "^6.7.1",
     "starknet": "^5.25.0",
-    "ipfs-http-client": "^60.0.0",
-    "wasm-feature-detect": "^1.3.1"
+    "ipfs-http-client": "^60.0.1",
+    "wasm-feature-detect": "^1.3.1",
+    "@menci/vite-plugin-wasm": "^0.6.2",
+    "websocket": "^1.0.34",
+    "vite-plugin-wasm": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -55,8 +58,7 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1",
-    "@menci/vite-plugin-wasm": "^0.6.2"  // ✅ Added WASM Plugin
+    "vite": "^5.4.1"
   },
   "browser": {
     "crypto": false,
