--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "TetraCryptPQC",
-  "version": "1.2.2",
+  "name": "TetraCryptPQC_Nexus",
+  "version": "1.3.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -37,9 +37,9 @@
     "starknet": "^5.25.0",
     "ipfs-http-client": "^60.0.1",
     "wasm-feature-detect": "^1.3.1",
-    "@menci/vite-plugin-wasm": "^0.6.2",
-    "websocket": "^1.0.34",
-    "vite-plugin-wasm": "^3.1.0"
+    "vite-plugin-wasm": "^3.4.1",
+    "vite-plugin-top-level-await": "^1.4.0",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -47,7 +47,7 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
