--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,50 @@
+# ✅ Netlify Build Configuration for TetraCryptPQC_Nexus
+
 [build]
-  command = "bun run build"
-  publish = "dist"
-  functions = "disabled" # Explicitly disable functions
+  command = "bun run build"      # Ensure Bun builds the project correctly
+  publish = "dist"               # Correct publish directory for Netlify
+  functions = "disabled"          # Explicitly disable Netlify Functions
 
+# ✅ Ensure Secure Build Environment
 [build.environment]
-  NODE_VERSION = "20" # Ensure latest Node.js is used
-  BUN_VERSION = "1.0.30" # Ensure correct Bun version
+  NODE_VERSION = "20"             # Latest stable Node.js version
+  BUN_VERSION = "1.0.30"          # Ensure correct Bun version
+  VITE_WASM_ENABLED = "true"      # Enables WebAssembly support in Vite
+  VITE_OPTIMIZE_WASM = "true"     # Ensures optimized WebAssembly handling
 
+# ✅ Development Server Configuration (Local Testing)
 [dev]
   command = "bun run dev"
   publish = "dist"
   port = 8080
+
+# ✅ Redirects & Security Headers
+[[headers]]
+  for = "/*"
+  [headers.values]
+    # 🔒 Enforce HTTPS for all traffic
+    Strict-Transport-Security = "max-age=63072000; includeSubDomains; preload"
+
+    # 🔐 Prevent Clickjacking Attacks
+    X-Frame-Options = "DENY"
+
+    # 📦 Prevent MIME Sniffing Attacks
+    X-Content-Type-Options = "nosniff"
+
+    # 🔏 Enable XSS Protection
+    X-XSS-Protection = "1; mode=block"
+
+    # 🌐 Secure Content Security Policy (CSP)
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; object-src 'none'; style-src 'self' 'unsafe-inline'; frame-ancestors 'none'"
+
+# ✅ Optimize Caching & Performance
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+# ✅ Fix SPA (Single Page App) Routing Issues
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
