--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,5 @@
 # ✅ Netlify Build Configuration for TetraCryptPQC_Nexus
+# ✅ Netlify Build Configuration for TetraCryptPQC_Nexus
 
 [build]
   command = "bun run build"      # Ensure Bun builds the project correctly
@@ -12,6 +13,7 @@
   VITE_WASM_ENABLED = "true"      # Enables WebAssembly support in Vite
   VITE_OPTIMIZE_WASM = "true"     # Ensures optimized WebAssembly handling
   NPM_FLAGS = "--legacy-peer-deps" # Fixes potential dependency resolution issues
+  CI = "true"                      # Ensures builds fail on errors in CI/CD environments
 
 # ✅ Development Server Configuration (Local Testing)
 [dev]
@@ -59,3 +61,7 @@
   from = "/api/*"
   to = "/api/index.js"
   status = 200
+
+# ✅ Increase Netlify Timeout for Large Builds
+[build]
+  timeout = 1800 # Increases timeout to prevent build failures on large projects
