--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "wasm-feature-detect": "^1.3.1",
     "vite-plugin-wasm": "^3.4.1",
     "vite-plugin-top-level-await": "^1.4.0",
-    "websocket": "^1.0.34"
+    "websocket": "^1.0.34",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
