--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0"
+    "class-variance-authority": "^0.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
