--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "websocket": "^1.0.34",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0"
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "class-variance-authority": "^0.8.0"
   },
   "devDependencies": {
