--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "starknet": "^5.25.0",
     "ipfs-http-client": "^60.0.1",
     "wasm-feature-detect": "^1.3.1",
-    "vite-plugin-wasm": "^3.4.1",
+    "@rollup/plugin-wasm": "^7.0.2",
     "vite-plugin-top-level-await": "^1.4.0",
     "websocket": "^1.0.34",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
